Safari booking insert and retreve oder details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="d_cmmntyou">Comment here....</string>
     <string name="d_feebackbtn">Send Feedback</string>
     <string name="d_delfeebackbtn">Delete Feedback</string>
+    <string name="validation">Pleace check your Date</string>
 
     <!--
     This string is used for square devices and overridden by hello_world in
