--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="s_previousSafaribtn">Search Your Previous Safari Booking</string>
     <string name="feedBacktxt">We will really appreciate it if you rate us now.</string>
     <string name="feedbackBtn">Rate Us</string>
+    <string name="t_DeleteBtn">Delete</string>
 
 
     <string name="d_topicLogin">Login</string>
@@ -81,6 +82,10 @@
     <string name="d_cmmntyou">Comment here....</string>
     <string name="d_feebackbtn">Send Feedback</string>
     <string name="d_delfeebackbtn">Delete Feedback</string>
+    <string name="d_register">Already Registered?</string>
+    <string name="d_loginhere">Login Here</string>
+    <string name="logoutBtn">Logout</string>
+    <string name="d_loginaddress">Email Address</string>
 
     <!--
     This string is used for square devices and overridden by hello_world in
