errors handling get perfect methods

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="d_loginaddress">Email Address</string>
 
     <string name="validation">Pleace check your Date</string>
+    <string name="forget_topic">Forget Password</string>
 
 
     <!--
