Modified UI design and create user profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
 
     <string name="validation">Pleace check your Date</string>
     <string name="forget_topic">Forget Password</string>
+    <string name="userLogout">Logout</string>
 
 
     <!--
